<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenboard"
    tools:context=".tutorials.TutorialsHomeActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/tutorials_videos"
        android:textColor="@color/textcolor"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_tutorial_introduction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_tutorial_introduction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/introduction_to_regerscenter"
        android:textAlignment="textStart"
        android:textColor="@color/textcolor"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_tutorial_history"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_tutorial_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/a_short_history_of_english"
        android:textAlignment="textStart"
        android:textColor="@color/textcolor"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_tutorial_vowels"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/tv_tutorial_vowels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/_1st_step_vowels_consonants"
        android:textAlignment="textStart"
        android:textColor="@color/textcolor"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tv_tutorial_history" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/textcolor"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/tv_tutorial_introduction"
        app:layout_constraintStart_toStartOf="@+id/tv_tutorial_introduction"
        app:layout_constraintTop_toBottomOf="@+id/tv_tutorial_introduction" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/textcolor"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/tv_tutorial_history"
        app:layout_constraintStart_toStartOf="@+id/tv_tutorial_history"
        app:layout_constraintTop_toBottomOf="@+id/tv_tutorial_history" />

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/textcolor"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/tv_tutorial_vowels"
        app:layout_constraintStart_toStartOf="@+id/tv_tutorial_vowels"
        app:layout_constraintTop_toBottomOf="@+id/tv_tutorial_vowels" />

    <ImageView
        android:id="@+id/iv_tutorial_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="32dp"
        android:rotation="180"
        android:tint="@color/whitecolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_right_arrow" />

    <ImageView
        android:id="@+id/iv_tutorial_introduction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tutorial_introduction"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_tutorial_introduction"
        app:layout_constraintTop_toTopOf="@+id/tv_tutorial_introduction"
        app:srcCompat="@drawable/ic_download" />

    <ImageView
        android:id="@+id/iv_tutorial_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tutorial_history"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_tutorial_history"
        app:layout_constraintTop_toTopOf="@+id/tv_tutorial_history"
        app:srcCompat="@drawable/ic_download" />

    <ImageView
        android:id="@+id/iv_tutorial_vowels"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tutorial_vowels"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_tutorial_vowels"
        app:layout_constraintTop_toTopOf="@+id/tv_tutorial_vowels"
        app:srcCompat="@drawable/ic_download" />
</androidx.constraintlayout.widget.ConstraintLayout>